--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block extra_styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 {% endblock %}
 {% block content %}
 <div class="login-page">
@@ -23,16 +24,16 @@
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" placeholder="Enter username" required>
+                <i class="fas fa-user"></i>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter password" required>
+                <i class="fas fa-lock"></i>
             </div>
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="login-btn">Login</button>
         </form>
-        <footer class="login-footer">
-            <p>&copy; 2024 Accident Response System. All rights reserved.</p>
-        </footer>
+        
     </div>
 </div>
 {% endblock %}
